--- a/DoIT/Base.lproj/Main.storyboard
+++ b/DoIT/Base.lproj/Main.storyboard
@@ -1,24 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14092" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fFK-Tx-e6b">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14081.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--To Do Liste-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DoIT" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IM2-pQ-pVZ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="IM2-pQ-pVZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Iln-DQ-CTl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IM2-pQ-pVZ" secondAttribute="bottom" id="eJI-cB-8ij"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IM2-pQ-pVZ" secondAttribute="trailing" id="txK-Lr-bnJ"/>
+                            <constraint firstItem="IM2-pQ-pVZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ynX-DT-uj3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="To Do Liste" id="hOt-Kd-r9z">
+                        <barButtonItem key="backBarButtonItem" title="Zurück" id="piN-XV-MiK"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="X3Z-uV-s9W">
+                            <connections>
+                                <action selector="addItem:" destination="BYZ-38-t0r" id="svU-Wz-mfc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableViewCT" destination="IM2-pQ-pVZ" id="NDE-NE-txy"/>
+                        <segue destination="V2s-rt-kCh" kind="show" identifier="newTaskSegue" id="v6l-27-0N2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="986" y="-665"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="tnL-dc-eL1">
+            <objects>
+                <viewController id="V2s-rt-kCh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bat-xd-RRz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aufgabe eingeben:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQP-wX-mHC">
+                                <rect key="frame" x="115" y="79" width="145" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6v-no-LsU">
+                                <rect key="frame" x="50" y="110" width="275" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wichtig?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgU-wC-8Qf">
+                                <rect key="frame" x="154" y="170" width="67" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZHH-ym-dYc">
+                                <rect key="frame" x="163" y="199" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HQg-I3-GvO">
+                                <rect key="frame" x="148" y="597" width="79" height="30"/>
+                                <state key="normal" title="Hinzufügen"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hQP-wX-mHC" firstAttribute="top" secondItem="Jn4-3P-gH9" secondAttribute="top" constant="15" id="1R7-7y-vL4"/>
+                            <constraint firstItem="HQg-I3-GvO" firstAttribute="centerX" secondItem="bat-xd-RRz" secondAttribute="centerX" id="B3s-Em-8IB"/>
+                            <constraint firstItem="hQP-wX-mHC" firstAttribute="centerX" secondItem="bat-xd-RRz" secondAttribute="centerX" id="CFZ-en-4jv"/>
+                            <constraint firstItem="Jn4-3P-gH9" firstAttribute="bottom" secondItem="HQg-I3-GvO" secondAttribute="bottom" constant="40" id="F7T-ep-kGy"/>
+                            <constraint firstItem="Jn4-3P-gH9" firstAttribute="trailing" secondItem="P6v-no-LsU" secondAttribute="trailing" constant="50" id="H9i-G7-aKp"/>
+                            <constraint firstItem="ZHH-ym-dYc" firstAttribute="centerX" secondItem="bat-xd-RRz" secondAttribute="centerX" id="J26-cE-qsk"/>
+                            <constraint firstItem="ZHH-ym-dYc" firstAttribute="top" secondItem="RgU-wC-8Qf" secondAttribute="bottom" constant="10" id="Jk7-tM-dbY"/>
+                            <constraint firstItem="RgU-wC-8Qf" firstAttribute="centerX" secondItem="bat-xd-RRz" secondAttribute="centerX" id="LdM-lR-XE6"/>
+                            <constraint firstItem="P6v-no-LsU" firstAttribute="centerX" secondItem="bat-xd-RRz" secondAttribute="centerX" id="PHn-8J-f7a"/>
+                            <constraint firstItem="P6v-no-LsU" firstAttribute="leading" secondItem="Jn4-3P-gH9" secondAttribute="leading" constant="50" id="e5S-21-uZm"/>
+                            <constraint firstItem="RgU-wC-8Qf" firstAttribute="top" secondItem="P6v-no-LsU" secondAttribute="bottom" constant="30" id="gfc-RP-K38"/>
+                            <constraint firstItem="P6v-no-LsU" firstAttribute="top" secondItem="hQP-wX-mHC" secondAttribute="bottom" constant="10" id="kRI-F0-6de"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Jn4-3P-gH9"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gvi-Mm-oMB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1820" y="-665"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="weu-H1-MoI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fFK-Tx-e6b" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rCb-1A-MWA">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mfb-B9-X50"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k8D-fn-1p5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="93.599999999999994" y="-665.21739130434787"/>
         </scene>
     </scenes>
 </document>
